--- a/sass/_slide2.scss
+++ b/sass/_slide2.scss
@@ -3,8 +3,13 @@
     position: absolute;
     top: 0;
     left: 0;
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
     transform: translateX(100%);
     opacity: 0;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
     transition: all .3s;
   }
   .content{
@@ -16,11 +21,16 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -40%);
+  -webkit-transform: translateY(10%);
+  -ms-transform: translateY(10%);
+  -o-transform: translateY(10%);
+  transform: translateY(10%);
   opacity: 0;
   transition: all 1s;
   width: 3.45rem;
   height: 2.12rem;
+  margin-left: - 1.725rem;
+  margin-top:-1.06rem;
   display:flex;
   justify-content:center;
   background-color: #000b28;
@@ -40,19 +50,31 @@
 }
 
 .letter-fadeIn {
-  transform: translate(-50%, -50%);
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
+  transform: translateY(0);
   opacity: 1;
 }
 
 .letter-paper {
+  position: absolute;
   width: 2.9rem;
   height: 2rem;
   background-color: #fff;
+  -webkit-transform: translateY(0.1rem);
+  -ms-transform: translateY(0.1rem);
+  -o-transform: translateY(0.1rem);
   transform: translateY(0.1rem);
   opacity: 0;
   text-align: center;
+  -webkit-transition: all 1.2s;
+  -o-transition: all 1.2s;
   transition: all 1.2s;
   box-shadow: 0 -1px 10px #666;
+  left: 50%;
+  margin-left: -1.45rem;
+  font-size: 0.10rem;
   p {
     line-height: 1.5;
   }
@@ -67,6 +89,9 @@
 }
 
 .paper-pushUp {
+  -webkit-transform: translateY(-0.3rem);
+  -ms-transform: translateY(-0.3rem);
+  -o-transform: translateY(-0.3rem);
   transform: translateY(-0.3rem);
   opacity: 1;
 }
