--- a/sass/_slide4.scss
+++ b/sass/_slide4.scss
@@ -3,8 +3,13 @@
     position: absolute;
     top: 0;
     left: 0;
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
     transform: translateX(100%);
     opacity: 0;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
     transition: all .3s;
   }
   .info {
@@ -14,6 +19,8 @@
     width: 100%;
     display: inline-block;
     text-align: center;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
     transition: all .5s;
   }
   .title{
@@ -27,7 +34,7 @@
   height: 3.32rem;
   top: 1.5rem;
   left: 50%;
-  transform:translateX(-50%);
+  margin-left:-1.5rem;
   display: flex;
   justify-content: center;
   .process-item {
@@ -43,7 +50,7 @@
       font-size: 0.12rem;
       width:1.2rem;
       left:50%;
-      transform: translateX(-50%);
+      margin-left: -0.6rem;
       text-align:center;
       span {
         font-size: 12px;
@@ -58,12 +65,16 @@
       color:#fff;
       top: -0.35rem;
     }
+    -webkit-transition: all .6s .1s;
+    -o-transition: all .6s .1s;
     transition: all .6s .1s;
   }
   .item-2 {
     color:#fff;
     top: 1.17rem;
     right: 0;
+    -webkit-transition: all .6s .2s;
+    -o-transition: all .6s .2s;
     transition: all .6s .2s;
     p {
       top: -0.48rem;
@@ -73,6 +84,8 @@
   .item-3 {
     top: 1.17rem;
     left: 0;
+    -webkit-transition: all .6s .3s;
+    -o-transition: all .6s .3s;
     transition: all .6s .3s;
     p {
       line-height: 0.16rem;
@@ -92,6 +105,8 @@
     bottom: 0;
     left: 50%;
     margin-left: -0.45rem;
+    -webkit-transition: all .6s .4s;
+    -o-transition: all .6s .4s;
     transition: all .6s .4s;
     p {
       top: 1.1rem;
