--- a/sass/common.scss
+++ b/sass/common.scss
@@ -3,34 +3,39 @@
 @import "animation";
 html,
 body {
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
   position: relative;
   font-family: 'Microsoft YaHei', 'Avenir', Helvetica, Arial, sans-serif;
 }
 
-html {
-  background: url("//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/bg.jpg") no-repeat;
-  background-size: cover;
-}
-
 #content {
-  width: 100%;
-  height: 100%;
+  width: 3.75rem;
+  height: 6.67rem;
   font-size: 0.13rem;
   .title {
     color: #ff5f4d;
     font-size: 0.24rem;
     line-height: 1.5;
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    -o-transform: translateY(10px);
     transform: translateY(10px);
     opacity: 0;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
   }
   .content {
     width: 3rem;
     line-height: 1.5;
+    -webkit-transform: translateY(20px);
+    -ms-transform: translateY(20px);
+    -o-transform: translateY(20px);
     transform: translateY(20px);
     opacity: 0;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
   }
   .letter-paper {
@@ -54,8 +59,12 @@ html {
   justify-content: center;
   // background-color: rgba(0, 0, 0, 0.5);
   img {
+    position: absolute;
     width: 2.88rem;
     height: 0.38rem;
+    top:0;
+    left: 50%;
+    margin-left: -1.44rem;
   }
 }
 
@@ -74,7 +83,9 @@ html {
 
 .bg {
   position: fixed;
-  z-index: -1;
+  z-index: -2;
+  top:0;
+  left:0;
   img {
     width: 100%;
     height: 100%;
@@ -87,11 +98,15 @@ html {
 @import "slide4";
 @import "slide5";
 @import "slide6";
+
 .updown {
   animation: updown 1s ease-in 1;
 }
 
 .push-in {
+  -webkit-transform: translateX(0) !important;
+  -ms-transform: translateX(0) !important;
+  -o-transform: translateX(0) !important;
   transform: translateX(0) !important;
   opacity: 1 !important;
 }
@@ -108,6 +123,7 @@ html {
   position: fixed;
   bottom: 34%;
   right: 13%;
+  -webkit-animation: planet 25s ease-in-out infinite;
   animation: planet 25s ease-in-out infinite;
   z-index: -1;
   transition: all .5s;
@@ -118,6 +134,7 @@ html {
   position: fixed;
   bottom: 0.4rem;
   left: 0.05rem;
+  -webkit-animation: updown 23s ease-in-out infinite;
   animation: updown 23s ease-in-out infinite;
   z-index: 996;
   transition: all .5s;
@@ -140,6 +157,9 @@ html {
 }
 
 .fadeInUp {
+  -webkit-transform: translateY(0) !important;
+  -ms-transform: translateY(0) !important;
+  -o-transform: translateY(0) !important;
   transform: translateY(0) !important;
   opacity: 1 !important;
 }
@@ -153,92 +173,93 @@ html {
   height:0.3rem;
   position: fixed;
   left:50%;
-  transform: translateX(-50%);
+  margin-left:-0.09rem;
   bottom:0.8rem;
   z-index:99999;
+  -webkit-animation: down 2s ease infinite;
   animation: down 2s ease infinite;
 }
 
 .drop.white{
-  background:url('//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/icon-drop.png') no-repeat;
+  background:url('//game.gtimg.cn/images/gameinstitute/act/a20170524match/icon-drop.png') no-repeat;
   background-size: cover;
 }
 
 .drop.blue{
-  background:url('//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/icon-drop2.png') no-repeat;
+  background:url('//game.gtimg.cn/images/gameinstitute/act/a20170524match/icon-drop2.png') no-repeat;
   background-size: cover;
 }
 
 @keyframes slideIcon {
   0% {
-    transform: translateY(160px);
+    transform: translate3d(0,160px,0);
   }
   60% {
-    transform: translateY(120px);
+    transform: translate3d(0,120px,0);
   }
   100% {
-    transform: translateY(160px);
+    transform: translate3d(0,160px,0);
   }
 }
 
 @keyframes updown {
   0% {
-    transform: translateY(-10px);
+    transform: translate3d(0,-10px,0);
   }
   50% {
-    transform: translateY(0px);
+    transform: translate3d(0,0px,0);
   }
   100% {
-    transform: translateY(-10px);
+    transform: translate3d(0,-10px,0);
   }
 }
 
 @keyframes down{
   0% {
-    transform: translateY(-20px);
+    transform: translate3d(0, -20px, 0);
     opacity: 0;
   }
   80% {
-    transform: translateY(20px);
+    transform: translate3d(0, 20px, 0);
     opacity: 1;
   }
   81%{
-    transform: translateY(20px);
+    transform: translate3d(0, 20px, 0);
     opacity: 0;
   }
   100% {
-    transform: translateY(-20px);
+    transform: translate3d(0, -20px, 0);
     opacity: 0;
   }
 }
 
 @keyframes leftRight {
   0% {
-    transform: translateX(-20px);
+    transform: translate3d(-20px, 0, 0);
   }
   50% {
-    transform: translateX(20px);
+    transform: translate3d(20px, 0, 0);
   }
   100% {
-    transform: translateX(-20px);
+    transform: translate3d(-20px, 0, 0);
   }
 }
 
 @keyframes push-left {
   0% {
-    transform: translateX(100%);
+    transform: translate3d(100%, 0, 0);
   }
   100% {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
   }
 }
 
 @keyframes push-right {
   0% {
-    transform: translateX(-100%);
+    transform: translate3d(-100%, 0, 0);
   }
   100% {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
   }
 }
 
@@ -253,25 +274,41 @@ html {
 
 @keyframes planet {
   0% {
-    transform: translateY(-20px);
+    transform: translate3d(0, -20px, 0);
     transform: rotateZ(0deg);
   }
   50% {
-    transform: translateY(20px);
+    transform: translate3d(0, 20px, 0);
     transform: rotateZ(-20deg);
   }
   100% {
-    transform: translateY(-20px);
+    transform: translate3d(0, -20px, 0);
     transform: rotateZ(0deg);
   }
 }
 
-
-@keyframes mentorAnimation{
-  0%{
-    transform:trans
+@media screen and (orientation: portrait){
+  .rotateMask{
+    position: fixed;
+    display:none;
+    top:0;
+    left:0;
   }
-  100%{
-    
+}
+
+@media screen and (orientation: landscape){
+  .rotateMask{
+    position: fixed;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.9);
+    color: #fff;
+    font-size: 0.1rem;
+    z-index:9999999;
   }
 }
